@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-14T16:26:49Z",
-  "count_outdated" : 133,
-  "uniques_outdated" : 90,
-  "count" : 138,
-  "uniques" : 95,
+  "timestamp" : "2022-09-15T02:04:09Z",
+  "count_outdated" : 138,
+  "uniques_outdated" : 94,
+  "count" : 142,
+  "uniques" : 98,
   "clones" : [
-    {
-      "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ]
-    },
     {
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 1,
