@@ -1,3 +1,11 @@
+2022-09-15T02:04:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057309964
+* notice: last 14d: unq all: 2 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 95 138
+* notice: next accum: outdated-unq outdated-all / unq all: 94 138 / 98 142
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-31] / []
+
 2022-09-14T16:26:49Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054444931
 * notice: last 14d: unq all: 3 5
